fix: took nowrap off for ingredient-name + added a test.js for the algorythm

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -135,7 +135,6 @@ header {
     }
     .ingredient-name {
       font-weight: 500;
-      white-space: nowrap;
     }
     .ingredient-quantity {
       color: #7a7a7a;
